--- a/ParserCombinator/ParserCombinator.csproj
+++ b/ParserCombinator/ParserCombinator.csproj
@@ -74,15 +74,19 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CompareableExtention.cs" />
+    <Compile Include="EndParser.cs" />
+    <Compile Include="FowardParser.cs" />
     <Compile Include="GenericParser.cs" />
     <Compile Include="IsInParser.cs" />
     <Compile Include="IsParser.cs" />
+    <Compile Include="ManyParser.cs" />
     <Compile Include="MapParsers.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>MapParsers.tt</DependentUpon>
     </Compile>
     <Compile Include="Option.cs" />
+    <Compile Include="OptionParser.cs" />
     <Compile Include="OrParsers.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -92,6 +96,9 @@
     <Compile Include="ParserContract.cs" />
     <Compile Include="Parsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangeParser.cs" />
+    <Compile Include="SomeParser.cs" />
+    <Compile Include="StringParser.cs" />
     <Compile Include="TraceParser.cs" />
     <Compile Include="Unit.cs" />
   </ItemGroup>
