--- a/ParserCombinator/ParserCombinator.csproj
+++ b/ParserCombinator/ParserCombinator.csproj
@@ -22,9 +22,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <CodeContractsEnableRuntimeChecking>True</CodeContractsEnableRuntimeChecking>
-    <CodeContractsRuntimeOnlyPublicSurface>False</CodeContractsRuntimeOnlyPublicSurface>
+    <CodeContractsRuntimeOnlyPublicSurface>True</CodeContractsRuntimeOnlyPublicSurface>
     <CodeContractsRuntimeThrowOnFailure>True</CodeContractsRuntimeThrowOnFailure>
-    <CodeContractsRuntimeCallSiteRequires>False</CodeContractsRuntimeCallSiteRequires>
+    <CodeContractsRuntimeCallSiteRequires>True</CodeContractsRuntimeCallSiteRequires>
     <CodeContractsRuntimeSkipQuantifiers>False</CodeContractsRuntimeSkipQuantifiers>
     <CodeContractsRunCodeAnalysis>True</CodeContractsRunCodeAnalysis>
     <CodeContractsNonNullObligations>False</CodeContractsNonNullObligations>
@@ -50,7 +50,7 @@
     <CodeContractsExtraAnalysisOptions />
     <CodeContractsBaseLineFile />
     <CodeContractsCacheAnalysisResults>True</CodeContractsCacheAnalysisResults>
-    <CodeContractsRuntimeCheckingLevel>Full</CodeContractsRuntimeCheckingLevel>
+    <CodeContractsRuntimeCheckingLevel>None</CodeContractsRuntimeCheckingLevel>
     <CodeContractsReferenceAssembly>Build</CodeContractsReferenceAssembly>
     <CodeContractsAnalysisWarningLevel>2</CodeContractsAnalysisWarningLevel>
     <DocumentationFile>bin\Debug\ParserCombinator.XML</DocumentationFile>
@@ -75,6 +75,7 @@
   <ItemGroup>
     <Compile Include="CompareableExtention.cs" />
     <Compile Include="EndParser.cs" />
+    <Compile Include="ExcludeParser.cs" />
     <Compile Include="FowardParser.cs" />
     <Compile Include="GenericParser.cs" />
     <Compile Include="IsInParser.cs" />
@@ -85,6 +86,7 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>MapParsers.tt</DependentUpon>
     </Compile>
+    <Compile Include="MemoizeParser.cs" />
     <Compile Include="Option.cs" />
     <Compile Include="OptionParser.cs" />
     <Compile Include="OrParsers.cs">
@@ -94,6 +96,7 @@
     </Compile>
     <Compile Include="Parser.cs" />
     <Compile Include="ParserContract.cs" />
+    <Compile Include="ParserExtentions.cs" />
     <Compile Include="Parsers.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RangeParser.cs" />
